adminer.yaml
---
apiVersion: "extensions/v1beta1"
kind: "Deployment"
metadata:
  name: "adminer"
  namespace: "default"
  labels:
    app: "adminer"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: "adminer"
  template:
    metadata:
      labels:
        app: "adminer"
    spec:
      containers:
      - name: "adminer"
        image: "adminer"
