adminer-service.yaml
apiVersion: v1
kind: Service
metadata:
 name: adminer
 namespace: default
 labels:
   app: adminer
spec:
  ports:
  - protocol: TCP
    port: 8080
  selector:
    app: adminer
  type: ClusterIP
