wp-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wp-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: wordpress
          servicePort: 80
      - path: /adminer
        backend:
          serviceName: adminer-service
          servicePort: 8080
